# DSSG-Data-Engineering-Workshop

./: .env  .gitignore  .gitpod.yml  404.html  DuckDB_and_Postgres.ipynb  Intro_to_duckdb.ipynb  LICENSE  README.md  docker-compose.yaml  gitpod.yaml  gitpod.yml  index.html  load_data.ipynb  mkdocs.yml  pyproject.toml  requirements.txt
.github/worflows/: docs.yaml
.github/workflows/: docs.yaml
0_getstarted/developer-setup/: index.html
0_getstarted/expectations/: index.html
0_getstarted/usecase/: index.html
1_store/5_minutes_of_sql/: index.html
1_store/data-evolution/: index.html
1_store/data-in-orgs/: index.html
1_store/databases/: index.html
1_store/duckdb/: index.html
1_store/sideeffects-of-storing-data/: index.html
1_store/why-sql-is-great/: index.html
2_extract/connections/: index.html
2_extract/data-destinations/: index.html
2_extract/data-sources/: index.html
2_extract/material/: index.html
3_transform/1_transformation_introduction/: index.html
3_transform/2_data_transformation_workflow/: index.html
3_transform/3_dbt_introduction/: index.html
3_transform/4_dbt_basics/: index.html
4_analyze/dashboarding-tools/: index.html
4_analyze/metabase/: index.html
4_analyze/thin-analytics/: index.html
assets/d2/: overview.d2
data/: pokemon__masterdata.csv  raw_customers.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
docs/: index.md
duckdb/: create_duckdb_with_data.py  pokemon.duckdb  pokemon__donations.json  pokemon__masterdata.csv
duckdb_dbt/: .user.yml  dbt_project.yml  profiles.yml
search/: search_index.json
(+72 files in other folders)
