[tool.poetry]
name = "dssg-data-engineering-workshop"
version = "0.1.0"
description = ""
authors = ["Philipp Wallhaeuser <wallhaeuser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
sqlalchemy = "^2.0.25"
jupyter = "^1.0.0"
duckdb = "0.9.2"
dbt-duckdb = "^1.7.0"
ipython-sql = "^0.5.0"
mkdocs-material = "^9.5.3"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
